--- a/src/OpenVsixSignTool/OpenVsixSignTool.csproj
+++ b/src/OpenVsixSignTool/OpenVsixSignTool.csproj
@@ -21,6 +21,7 @@
     <PackageReference Include="Microsoft.Azure.KeyVault.Cryptography" Version="3.0.4" />
     <PackageReference Include="Microsoft.Extensions.CommandLineUtils" Version="1.1.0" />
     <PackageReference Include="RSAKeyVaultProvider" Version="1.1.22" />
+    <PackageReference Include="System.IO.Packaging" Version="8.0.0" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\OpenVsixSignTool.Core\OpenVsixSignTool.Core.csproj" />
